welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( if (13<=a && a<=19) { nb=nb+1}
                                     ^countTeen:4: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (13<=b && b<=19) { nb=nb+1}
                                     ^countTeen:5: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (13<=c && c<=19) { nb=nb+1}
                                     ^countTeen:6: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (13<=d && d<=19) { nb=nb+1})
                                     ^countTeen:6: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (13<=d && d<=19) { nb=nb+1})
             ^countTeen:3: error: type mismatch;
 found   : Unit
 required: Int
	if ( if (13<=a && a<=19) { nb=nb+1}
        ^